--- a/SocialMegazord2.0/SocialMegazord2.0/Views/Comunities/MutualHelp.cshtml
+++ b/SocialMegazord2.0/SocialMegazord2.0/Views/Comunities/MutualHelp.cshtml
@@ -28,6 +28,19 @@
                         <div class="profile">
                             @Html.ActionLink(User.Identity.GetUserName(), "Index", "Home", new { area = "" }, new { @class = "name" })
                             <ul class="menu">
+                                @if (User.IsInRole("Admin"))
+                                {
+                                    <li>
+                                        <a id="page_settings" href="#">Admin Functionalities</a>
+                                        <div class="horizontal_menu">
+                                            <ul>
+                                                <li>@Html.ActionLink("Edit Users", "EditUsers", "User", null, htmlAttributes: new { id = "editUsersLink" })</li>
+                                                <li>@Html.ActionLink("Edit Posts", "EditPosts", "User", null, new { area = "", value = "editPostsLink" })</li>
+                                                <li>@Html.ActionLink("Edit Events", "EditEvents", "User", null, htmlAttributes: new { id = "editEventsLink" })</li>
+                                            </ul>
+                                        </div>
+                                    </li>
+                                }
                                 <li>
                                     <a id="page_settings" href="#">My Profile</a>
                                     <div class="horizontal_menu">
@@ -97,10 +110,10 @@
                             @item.Content
                         </div>
                         <footer>
-                            @*<a href="eventOptions.html"><button cl
-                                <div class="article_containter">
-                                   ass="submitButtons">Options &raquo;</button></a>*@
-                            @Html.ActionLink("Options", "Options", "Event", new { @id = item.Id }, new { @type = "button", @class = "submitButtons" })
+                            @if (User.IsInRole("Admin") || User.Identity.Name.Equals(item.AuthorEmail))
+                            {
+                                @Html.ActionLink("Options", "Options", "Post", new { @id = item.Id }, new { @type = "button", @class = "submitButtons" })
+                            }
                         </footer>
                     </div>
                 </article>
