--- a/SocialMegazord2.0/SocialMegazord2.0/Views/Post/Create.cshtml
+++ b/SocialMegazord2.0/SocialMegazord2.0/Views/Post/Create.cshtml
@@ -18,6 +18,19 @@
         @Html.AntiForgeryToken()
         <div id="profile_div">
             <ul class="profile-wrapper">
+                @if (User.IsInRole("Admin"))
+                {
+                    <li>
+                        <a id="page_settings" href="#">Admin Functionalities</a>
+                        <div class="horizontal_menu">
+                            <ul>
+                                <li>@Html.ActionLink("Edit Users", "EditUsers", "User", null, htmlAttributes: new { id = "editUsersLink" })</li>
+                                <li>@Html.ActionLink("Edit Posts", "EditPosts", "User", null, new { area = "", value = "editPostsLink" })</li>
+                                <li>@Html.ActionLink("Edit Events", "EditEvents", "User", null, htmlAttributes: new { id = "editEventsLink" })</li>
+                            </ul>
+                        </div>
+                    </li>
+                }
                 <li>
                     <div class="profile">
                         @Html.ActionLink(User.Identity.GetUserName(), "Index", "Home", new { area = "" }, new { @class = "name" })
