--- a/SocialMegazord2.0/SocialMegazord2.0/Views/User/EditEvents.cshtml
+++ b/SocialMegazord2.0/SocialMegazord2.0/Views/User/EditEvents.cshtml
@@ -18,6 +18,19 @@
         <div id="profile_div">
             <ul class="profile-wrapper">
                 <li>
+                    @if (User.IsInRole("Admin"))
+                    {
+                    <li>
+                        <a id="page_settings" href="#">Admin Functionalities</a>
+                        <div class="horizontal_menu">
+                            <ul>
+                                <li>@Html.ActionLink("Edit Users", "EditUsers", "User", null, htmlAttributes: new { id = "editUsersLink" })</li>
+                                <li>@Html.ActionLink("Edit Posts", "EditPosts", "User", null, new { area = "", value = "editPostsLink" })</li>
+                                <li>@Html.ActionLink("Edit Events", "EditEvents", "User", null, htmlAttributes: new { id = "editEventsLink" })</li>
+                            </ul>
+                        </div>
+                    </li>
+                    }
                     <div class="profile">
                         @Html.ActionLink(User.Identity.Name, "Index", "Home", null, new { area = "", @class = "name" })
                         <ul class="menu">
@@ -79,7 +92,7 @@
                         <footer>
                             @if (User.IsInRole("Admin") || User.Identity.Name.Equals(item.AuthorEmail))
                             {
-                                @Html.ActionLink("Options", "Options", "Post", new { @id = item.Id }, new { @type = "button", @class = "submitButtons" })
+                               @Html.ActionLink("Options", "Options", "Event", new { @id = item.Id }, new { @type = "button", @class = "submitButtons" })
                             }
                         </footer>
                     </div>
