--- a/SocialMegazord2.0/SocialMegazord2.0/Content/communities.css
+++ b/SocialMegazord2.0/SocialMegazord2.0/Content/communities.css
@@ -12,6 +12,7 @@ body {
     padding: 0;
 
     background-size: cover;
+    background-image:url(Images/mutualhelp.jpg);
     background-repeat: no-repeat;
     background-attachment: fixed;
 }
