--- a/SocialMegazord2.0/SocialMegazord2.0/Content/main.css
+++ b/SocialMegazord2.0/SocialMegazord2.0/Content/main.css
@@ -16,6 +16,17 @@ a {text-decoration:none;}
     margin:-190px auto;
     padding-left: 86%;
 }
+body {
+    position: relative;
+    background-color: white;
+    margin: 0;
+    padding: 0;
+
+    background-size: cover;
+    background-image:url(Images/science.png);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+}
 .profile-wrapper::after {
     content: '';
     position: absolute;
