new working page about us

--- a/SocialMegazord2.0/SocialMegazord2.0/Views/Home/Index.cshtml
+++ b/SocialMegazord2.0/SocialMegazord2.0/Views/Home/Index.cshtml
@@ -93,6 +93,7 @@
 
     <footer class="the_footer">
         <p>&copy; @DateTime.Now.Year - Social Megazord</p>
+        <p>@Html.ActionLink("About Us","AboutUs","Home",null,new { area="",@color="black",@class="the_footer"})</p>
     </footer>
 
     @Scripts.Render("~/bundles/jquery")
