--- a/design/css/communities.css
+++ b/design/css/communities.css
@@ -2,18 +2,28 @@
     font-family: footer;
     src: url(../fonts/Minecraftia-Regular.ttf);
 }
-/** {*/
-    /*z-index: -5;*/
-/*}*/
-body {
-    position: relative;
-    background-color: white;
-    margin: 0;
-    padding: 0;
+.myImage {
+    float: left;
+    height: 75px;
+    width: 235px;
+    font-family: Veranda;
+}
+.heading {
+    float:right;
+}
+.icons{
+    display:inline-block;
+    width: 64px;
+    height: 64px;
+}
+#content {
 
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
+
+    width:50%;
+    margin-left: auto ;
+    margin-right:auto ;
+
+
 }
 ul, li {
     list-style:none;
