--- a/SocialMegazord2.0/SocialMegazord2.0/Content/communities.css
+++ b/SocialMegazord2.0/SocialMegazord2.0/Content/communities.css
@@ -621,3 +621,9 @@ textarea {
     width: 100%;
     resize: none;
 }
+
+
+.content {
+    border-radius: 3px;
+    box-shadow:0 1px 0 #555 inset, 0 1px 7px #111;
+}
