Title for events fixed

--- a/SocialMegazord2.0/SocialMegazord2.0/Views/Event/Options.cshtml
+++ b/SocialMegazord2.0/SocialMegazord2.0/Views/Event/Options.cshtml
@@ -76,7 +76,7 @@
         <div class="article_containter">
             <article>
                 <div class="row">
-                    <h2>@Model.</h2>
+                    <h2>@Model.Title</h2>
                     <small class="author">@Model.Author.Name</small>
                     <small class="author">@Model.Type</small>
                     <small class="author">@Model.Place</small>
