--- a/SocialMegazord2.0/SocialMegazord2.0/Views/Post/List.cshtml
+++ b/SocialMegazord2.0/SocialMegazord2.0/Views/Post/List.cshtml
@@ -80,7 +80,7 @@
                     <div class="row">
                         <h2>@item.Title</h2>
                         <small class="author">@item.Author.Name</small>
-                        @*<small class="author">@item.Communities</small>*@
+                        <small class="author">@item.Communities.Name</small>
                         <small class="author">@item.DateAdded</small>
                         <div class="article_position" style="color: black">
                             @item.Content
