--- a/SocialMegazord2.0/SocialMegazord2.0/Views/Event/Edit.cshtml
+++ b/SocialMegazord2.0/SocialMegazord2.0/Views/Event/Edit.cshtml
@@ -1,7 +1,7 @@
-﻿@model SocialMegazord2._0.Models.PostViewModel
+﻿@model SocialMegazord2._0.Models.EventViewModel
 @using Microsoft.AspNet.Identity
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Edit";
 }
 <!DOCTYPE html>
 <html lang="en">
@@ -15,7 +15,8 @@
 
     @using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "profile_div" }))
     {
-        @Html.AntiForgeryToken()
+     
+
         <div id="profile_div">
             <ul class="profile-wrapper">
                 @if (User.IsInRole("Admin"))
@@ -63,6 +64,8 @@
             </ul>
         </div>
     }
+
+
     <div id="contents">
         @Html.ActionLink(" ", "Entertainment", "Comunities", null, new { @id = "button1", @class = "button button1" })
         @Html.ActionLink(" ", "Science", "Comunities", null, new { @id = "button3", @class = "button button3" })
@@ -71,34 +74,51 @@
 
     <div id="navMyProfile">
         <ul class="navUL">
-            <li class="navLi">@Html.ActionLink("Posts", "List", "Post", routeValues: null, htmlAttributes: new { id = "postsLink" })</li>
+            <li class="navLi">@Html.ActionLink("Interests", "Index", "Manage", routeValues: null, htmlAttributes: new { id = "interestsLink" })</li>
             <li class="navLi">@Html.ActionLink("Events", "List", "Event", routeValues: null, htmlAttributes: new { id = "eventsLink" })</li>
         </ul>
     </div>
-    @using (Html.BeginForm("Create", "Post", FormMethod.Post, new { @class = "formEvent" }))
+    @using (Html.BeginForm("Edit", "Event", FormMethod.Post, new { @class = "formEvent" }))
     {
-        @Html.AntiForgeryToken()
-        @Html.ValidationSummary("")
+        
+
         <div class="eventType">
-            @Html.LabelFor(m => m.Title, new { @class = "lable", @value = "Choose title" })
-            @Html.TextBoxFor(m => m.Title, new { @class = "content", @type = "text", @name = "title", placeholder = "Example: Meeting" })
+            @Html.AntiForgeryToken()
+            @Html.ValidationSummary()
+
+            @Html.HiddenFor(m => m.Id)
+            @Html.HiddenFor(m => m.AuthorId)
+            @Html.LabelFor(m => m.Type, new { @class = "lable", @value = "Choose type" })
+            @Html.TextBoxFor(m => m.Type, new { @class = "content", @type = "text", @name = "disc", placeholder = "Example: Meeting" })
             <div>
                 <br>
-                @Html.LabelFor(m => m.Communities, new { @class = "lable", @value = "Communities" })
-                @Html.DropDownListFor(m => m.CommunityId,
-               new SelectList(Model.Communities, "Id", "Name"),
-                new { @class = "content", @type = "text", @name = "disc"})
+                @Html.LabelFor(m => m.Title, new { @class = "lable", @value = "Choose a proper title" })
+                @Html.TextBoxFor(m => m.Title, new { @class = "content", @type = "text", @name = "disc", @placeholer = "Example: HARRY POTTER AT NDK, ON 12 FEBRUARY!!!" })
             </div>
             <br>
             <div>
-                @Html.LabelFor(m => m.Content, new { @class = "lable", @value = "Content" })
-                <br><br>
-                @Html.TextAreaFor(model => model.Content, new { @class = "content",@rows="10",@cols="40", @type = "text", @name = "Content" })
+                @Html.LabelFor(m => m.Date, new { @class = "lable", @value = "Date:" })
+                @Html.TextBoxFor(model => model.Date, new { @class = "content", @type = "date", @name = "Date" })
+                @Html.TextBoxFor(model => model.Time, new { @class = "content", @type = "time" })
             </div>
             <br>
+            <div>
+                @Html.LabelFor(m => m.Place, new { @class = "lable", @value = "Place of Event" })
+                @Html.TextBoxFor(m => m.Place, new { @class = "content", @value = "Place", @placeholder = "Some City" })
+            </div>
+            <br>
+            <div>
+                @Html.LabelFor(m => m.AdditionalContent, new { @class = "lable", @value = "Additional Content" })
+            </div>
+            <br><br>
+            <div>
+                @Html.TextAreaFor(m => m.AdditionalContent, new { @rows = "20", cols = "50", @class = "content", @value = "Content" })
+            </div>
+            <br>
+
         </div>
-       @Html.ActionLink("Cancel", "Entertainment", "Comunities", null, new { @type = "button", @class = "submitButtons" })
-        <input type="submit" value="Create" class="submitButtons"/>
+        @Html.ActionLink("Cancel", "List", "Event", null, new { @type = "button", @class = "submitButtons" })
+        <input type="submit" class="submitButtons" value="Edit" />
     }
     <footer>
         <div class="the_footer">
