--- a/SocialMegazord2.0/SocialMegazord2.0/Views/Event/List.cshtml
+++ b/SocialMegazord2.0/SocialMegazord2.0/Views/Event/List.cshtml
@@ -35,7 +35,7 @@
                                 <a id="page_settings" href="#">My Profile</a>
                                 <div class="horizontal_menu">
                                     <ul>
-                                        <li>@Html.ActionLink("Interests", "Interests", "Manage", new { area = "", value = "Interests" })</li>
+                                        <li>@Html.ActionLink("Interests", "Index", "Manage", new { area = "", value = "Interests" })</li>
                                         <li>@Html.ActionLink("Events", "List", "Event", routeValues: null, htmlAttributes: new { id = "eventsLink" })</li>
                                     </ul>
                                 </div>
@@ -82,7 +82,7 @@
                     <small class="author">@item.Author.Name</small>
                     <small class="author">@item.Type</small>
                     <small class="author">@item.Place</small>
-                    <small class="author">@item.Date.ToShortDateString() @@ @item.Hour.TimeOfDay</small>
+                    <small class="author">@item.Date.ToShortDateString() @@ @item.Time.TimeOfDay</small>
                     <div class="article_position" style="color: black">
                         @item.AdditionalContent
                     </div>
