--- a/SocialMegazord2.0/SocialMegazord2.0/Views/Account/Register.cshtml
+++ b/SocialMegazord2.0/SocialMegazord2.0/Views/Account/Register.cshtml
@@ -29,8 +29,8 @@
 
     <div id="contents">
         @Html.ActionLink(" ","Entertainment", "Comunities", null, new { @id = "button1", @class = "button button1" })
-        @Html.ActionLink(" ", "Comunities", null, new { @id = "button3", @class = "button button3" })
-        @Html.ActionLink(" ", "Comunities", null, new { @id = "button2", @class = "button button2" })
+        @Html.ActionLink(" ", "MutualHelp" ,"Comunities", null, new { @id = "button3", @class = "button button3" })
+        @Html.ActionLink(" ", "Science" ,"Comunities", null, new { @id = "button2", @class = "button button2" })
     </div>
 
 
