--- a/SocialMegazord2.0/SocialMegazord2.0/Content/communities.css
+++ b/SocialMegazord2.0/SocialMegazord2.0/Content/communities.css
@@ -8,7 +8,7 @@ body {
     background-color: white;
     margin: 0;
     padding: 0;
-
+    background-image:url(Images/mutualhelp.jpg);
     background-size: cover;
  
     background-repeat: no-repeat;
@@ -392,7 +392,6 @@ input[type=submit]{
     height: 50px;
     font-size:15px;
     text-align:center;
-    border:1px solid blue;
 }
 input[type=submit]:hover {
     background-color: brown;
