--- a/SocialMegazord2.0/SocialMegazord2.0/Views/Post/Edit.cshtml
+++ b/SocialMegazord2.0/SocialMegazord2.0/Views/Post/Edit.cshtml
@@ -82,7 +82,7 @@
     @using (Html.BeginForm("Edit", "Post", FormMethod.Post, new { @class = "formEvent" }))
     {
         @Html.AntiForgeryToken()
-        @Html.ValidationSummary(true)
+        @Html.ValidationSummary()
 
         @Html.HiddenFor(m => m.Id)
         @Html.HiddenFor(m => m.AuthorId)
